# stem-denoising-restoration

./: .gitignore  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: cross_dose.yaml  detection_tuned.yaml  dose_sweep.yaml  off_geometry.yaml
data/: README.md
data/sample/: binary_square_d20.npz  hexagonal_d5.npz  hexagonal_d50.npz
docs/: api.md
models/: MODEL_CARD.md  unet_fixed_high.pt  unet_fixed_low.pt  unet_n2n.pt  unet_supervised.pt
notebooks/: tutorial.ipynb
results/: cross_dose.json  detection_tuned.json  dose_sweep.json  off_geometry.json  scale_robustness.json  training_history.json
scripts/: build_notebook.py  check_scale_robustness.py  make_figures.py  make_samples.py  render_tables.py  train_all.py
src/stemdenoise/: __init__.py  benchmark.py  classical.py  cli.py  detect.py  io.py  metrics.py  net.py  plots.py  sim.py  train.py
tests/: test_benchmark.py  test_classical.py  test_cli.py  test_detect.py  test_io.py  test_metrics.py  test_net.py  test_sim.py  test_train.py
